Negative value on the Redo panel for Extrude Along Normal and Extrude individuals. #79112

Closed
opened 2020-07-20 14:13:18 +02:00 by Juan · 5 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.67

Blender Version
Broken: version: 2.83.2, branch: master, commit date: 2020-07-09 05:50, hash: 239fbf7d93
Worked: Not sure if ever did

Short description of error
When using the command Extrude Along Normal or Extrude individuals, there is an inconsistency between the value that the user sets while performing the action (via dragging the gizmo or keyboard shortcut) and the value that can be set on the Redo panel.

Exact steps for others to reproduce the error
1- Make a new scene.
2- Select the default cube and go to edit mode.
3- Select one or more faces of the cube.
4- From the Tools choose Extrude Along Normals (can be reproduced by selecting Extrude Individual as well).
5- While dragging the gizmo on the 3D viewport and keep the mouse button pressed, write 2 (or any number that you like) and hit enter.
6- If you now go to the Redo panel you will see that the value that you just put it shows as negative.

The same happens like this:
1- Make a new scene.
2- Select the default cube and go to edit mode.
3- Select one or more faces of the cube.
4- Hit Alt + E to call the Extrude shortcut panel and choose Extrude Along Normals (can be reproduced by selecting Extrude Individual as well).
5- Write 2 (or any number that you like) and hit enter.
6- If you now go to the Redo panel you will see that the value that you just put it shows as negative.

This problem goes beyond the negative value only, because if you use exclusively the Redo panel and write 2 you will notice that the faces are going in the opposite direction.

Negative value.mp4

Thank you for your attention.
Juan

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.67 **Blender Version** Broken: version: 2.83.2, branch: master, commit date: 2020-07-09 05:50, hash: `239fbf7d93` Worked: Not sure if ever did **Short description of error** When using the command Extrude Along Normal or Extrude individuals, there is an inconsistency between the value that the user sets while performing the action (via dragging the gizmo or keyboard shortcut) and the value that can be set on the Redo panel. **Exact steps for others to reproduce the error** 1- Make a new scene. 2- Select the default cube and go to edit mode. 3- Select one or more faces of the cube. 4- From the Tools choose Extrude Along Normals (can be reproduced by selecting Extrude Individual as well). 5- While dragging the gizmo on the 3D viewport and keep the mouse button pressed, write 2 (or any number that you like) and hit enter. 6- If you now go to the Redo panel you will see that the value that you just put it shows as negative. The same happens like this: 1- Make a new scene. 2- Select the default cube and go to edit mode. 3- Select one or more faces of the cube. 4- Hit Alt + E to call the Extrude shortcut panel and choose Extrude Along Normals (can be reproduced by selecting Extrude Individual as well). 5- Write 2 (or any number that you like) and hit enter. 6- If you now go to the Redo panel you will see that the value that you just put it shows as negative. This problem goes beyond the negative value only, because if you use exclusively the Redo panel and write 2 you will notice that the faces are going in the opposite direction. [Negative value.mp4](https://archive.blender.org/developer/F8708906/Negative_value.mp4) Thank you for your attention. Juan
Author

Added subscriber: @jc4d

Added subscriber: @jc4d

Added subscriber: @iss

Added subscriber: @iss

This looks more like a hack than a bug.

This looks more like a hack than a bug.

This issue was referenced by bafe22e8ce

This issue was referenced by bafe22e8cea78991e3f8e4e435985f9a27a1587f

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Campbell Barton self-assigned this 2020-07-21 13:38:45 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79112
No description provided.