Fix T79112: Redo shrink/fatten uses negative values

The numbers in the redo panel were negated compared to the value
entered while transforming.