source/blender/editors/transform/transform_mode_shrink_fatten.c
@@ -54,13 +54,13 @@ static void applyShrinkFatten(TransInfo *t, const int UNUSED(mval[2]))
   char str[UI_MAX_DRAW_STR];
   size_t ofs = 0;
 
-  distance = -t->values[0];
+  distance = t->values[0];
 
   snapGridIncrement(t, &distance);
 
   applyNumInput(&t->num, &distance);
 
-  t->values_final[0] = -distance;
+  t->values_final[0] = distance;
 
   /* header print for NumInput */
   ofs += BLI_strncpy_rlen(str + ofs, TIP_("Shrink/Fatten:"), sizeof(str) - ofs);
